--- a/flora/lang/fr.json
+++ b/flora/lang/fr.json
@@ -225,17 +225,17 @@
     "game:block-lognarrow-*-laurel-*": "Petit rondin de laurier",
     "game:block-lognarrow-*-macaranga-*": "Petit rondin de macaranga",
 
-    "game:block-logbush-*-dwarfpine-*": "Buisson de pin nain",
-    "game:block-logbush-*-juniper-*": "Buisson de genévrier",
-    "game:block-logbush-*-willow-*": "Buisson de saule",
-    "game:block-logbush-*-buckthorn-*": "Buisson de nerprun",
-    "game:block-logbush-*-blackthorn-*": "Buisson de prunellier",
-    "game:block-logbush-*-saxaul-*": "buisson de haloxylon",
-    "game:block-logbush-*-erica-*": "Buisson d'erica",
-    "game:block-logbush-*-combretum-*": "Buisson de combretum",
-    "game:block-logbush-*-laurel-*": "Buisson de laurier",
-    "game:block-logbush-*-macaranga-*": "Buisson de macaranga",
-    "game:block-logbush-*-acacia-*": "Buisson d'acacia",
+    "game:block-logbush-*-dwarfpine-*": "Arbuste de pin nain",
+    "game:block-logbush-*-juniper-*": "Arbuste de genévrier",
+    "game:block-logbush-*-willow-*": "Arbuste de saule",
+    "game:block-logbush-*-buckthorn-*": "Arbuste de nerprun",
+    "game:block-logbush-*-blackthorn-*": "Arbuste de prunellier",
+    "game:block-logbush-*-saxaul-*": "Arbuste de haloxylon",
+    "game:block-logbush-*-erica-*": "Arbuste d'erica",
+    "game:block-logbush-*-combretum-*": "Arbuste de combretum",
+    "game:block-logbush-*-laurel-*": "Arbuste de laurier",
+    "game:block-logbush-*-macaranga-*": "Arbuste de macaranga",
+    "game:block-logbush-*-acacia-*": "Arbuste d'acacia",
 
     "game:block-leavesbranchy-*-dwarfpine": "Branches de pin nain",
     "game:block-leavesbranchy-*-juniper": "Branches de genévrier",
